# ChangeLog for games-arcade/naev
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> +files/0.3.4-Makefile.patch,
  +naev-0.3.4.ebuild:
  New package.
