@@ -1,5 +1,8 @@
 AUX 0.3.4-Makefile.patch 1455 RMD160 65544add25dc2ab33d3e7701cf073c2d09a38c74 SHA1 dba794a179c6359d201ce44c21ed45a72314ed87 SHA256 1847e2e0009188572629cf281947affc3d7b05d7c2a4c53d499a6e71ea5000ed
 DIST naev-0.3.4.tar.bz2 328075 RMD160 00d4eff2258cbc1b15debed4ac69d026067ed071 SHA1 78d27ffc1b40ea33d94038fd70f9d0ecf7006ea9 SHA256 b4463e5a2fb4c8860e58aea5e776482e6f670a8f4efeabd933a9bde3b384c665
+DIST naev-0.3.5.tar.bz2 389812 RMD160 53341497a1e28cb638c1ad6bb1e6dacb7c318f4a SHA1 f7a2db558cd3b3b4bb338d16c14e8889fb15e484 SHA256 484cc2f56b24a641625aabd8549151fa794cfe3dadc8fae02d94a6979cb5a369
 DIST ndata-0.3.3 57711114 RMD160 aca0177f8b8400c8306b8acf19c5455749ada4c4 SHA1 f0ccaf10724130c17504a26e858276b229a95677 SHA256 958a57da6b635a0f6f9a492356aac0bd3132768e391385631d9092f216bc9163
+DIST ndata-0.3.5 58580368 RMD160 ad65b8e1efea76ae97275a26d345c214f4847847 SHA1 fb2b260bc2b4e3b5213d37c751df35a9346cde13 SHA256 778d6be3e55a550309b28c478981bd59b2ece92e921475da6a363333c793766f
 EBUILD naev-0.3.4.ebuild 1309 RMD160 ea4a5291456997239930264264a128ba6afd4e85 SHA1 de71c71cc4ac9bb2ea9e7ab0755329ff4c424c81 SHA256 f279553a265d893fc012df95473aa777f9c16d63e1eef76cf7efaf9a27c3e269
-MISC ChangeLog 233 RMD160 d22c0daa9ab90e594b2af8ccf5539b1b8eeb4dca SHA1 f6ee80170ad932c88aeca123a22e4760859b5604 SHA256 d1d458e3b0a0c9bb73265ace9a955e029314eea73576439e7676bb592c905560
+EBUILD naev-0.3.5.ebuild 1302 RMD160 d0ba5fc3845f4ba5319bf3fa8e27a8fe3ea38e5e SHA1 2a4a8893281c85839c7c9081484dc7c7817f829d SHA256 2cf0ad4094351e7bbc40c76929ae45b3ec5f2144e7742661ecbfeba2e65725aa
+MISC ChangeLog 322 RMD160 5e076bfc487d8649f34fb071f3d979e5e38d0ff7 SHA1 e6ae4f9f26239320f048a753dd39279af76b4ae4 SHA256 0b8f196c4b47e51e6e7b9b2098bd1f4163d1bd23986d2b71f5a36042b503ed78
