@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/naev
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> +naev-0.3.5.ebuild:
+  WIP version bump.
 
   23 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> +files/0.3.4-Makefile.patch,
   +naev-0.3.4.ebuild:
